# ts-stat-tests

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
docs/: index.md
docs/code/: correlation.md  data.md  errors.md  heteroscedasticity.md  index.md  linearity.md  normality.md  regularity.md  seasonality.md  stability.md  stationarity.md
docs/code/coverage/: class_index.html  function_index.html  index.html  status.json  z_12f61204a2fd893d___init___py.html  z_12f61204a2fd893d_correlation_py.html  z_12f61204a2fd893d_normality_py.html  z_12f61204a2fd893d_regularity_py.html  z_12f61204a2fd893d_seasonality_py.html  z_12f61204a2fd893d_stability_py.html  z_12f61204a2fd893d_stationarity_py.html  z_223f5bf099d4a095___init___py.html  z_223f5bf099d4a095_data_py.html  z_223f5bf099d4a095_errors_py.html  z_3e63266b14a72879___init___py.html  z_4094ebd3a45e2c6e___init___py.html  z_702ead6eb2826e2e___init___py.html  z_82d3a98551bf1a78___init___py.html  z_82d3a98551bf1a78_correlation_py.html  z_82d3a98551bf1a78_heteroscedasticity_py.html  z_82d3a98551bf1a78_linearity_py.html  z_82d3a98551bf1a78_normality_py.html  z_82d3a98551bf1a78_regularity_py.html  z_82d3a98551bf1a78_seasonality_py.html  z_82d3a98551bf1a78_stability_py.html  z_82d3a98551bf1a78_stationarity_py.html  z_bc00adc00b7c87ba___init___py.html  z_bc00adc00b7c87ba_algorithms_py.html  z_cf8dedb73710b331_tests_py.html  z_d1b4cc3c0143f559___init___py.html
docs/overrides/: home.html
docs/overrides/hooks/: shortcodes.py
latest/: index.html  objects.inv
latest/code/correlation/: index.html
latest/code/coverage/: class_index.html  status.json  z_12f61204a2fd893d_heteroscedasticity_py.html  z_12f61204a2fd893d_regularity_py.html  z_12f61204a2fd893d_seasonality_py.html  z_1d00f33c3e207ff4___init___py.html  z_223f5bf099d4a095___init___py.html  z_4094ebd3a45e2c6e_algorithms_py.html  z_702ead6eb2826e2e_tests_py.html  z_82d3a98551bf1a78_regularity_py.html  z_82d3a98551bf1a78_seasonality_py.html  z_cf8dedb73710b331___init___py.html  z_cf8dedb73710b331_algorithms_py.html  z_dae0bafcaaa20122___init___py.html  z_dae0bafcaaa20122_algorithms_py.html  z_e8bd55dbcd1411b2_algorithms_py.html  z_e8bd55dbcd1411b2_tests_py.html
latest/code/data/: index.html
latest/code/linearity/: index.html
latest/code/normality/: index.html
latest/code/stability/: index.html
latest/code/stationarity/: index.html
latest/search/: search_index.json
latest/usage/overview/: index.html
src/tests/: setup.py  test_correlation.py  test_data.py  test_errors.py  test_heteroscedasticity.py  test_linearity.py  test_normality.py  test_regularity.py  test_seasonality.py  test_stability.py  test_stationarity.py
src/ts_stat_tests/algorithms/: correlation.py  heteroscedasticity.py  linearity.py  normality.py  regularity.py  seasonality.py  stability.py  stationarity.py
src/ts_stat_tests/heteroscedasticity/: __init__.py
src/ts_stat_tests/linearity/: __init__.py  algorithms.py
src/ts_stat_tests/normality/: __init__.py
src/ts_stat_tests/regularity/: __init__.py
src/ts_stat_tests/seasonality/: __init__.py
src/ts_stat_tests/stability/: __init__.py
src/ts_stat_tests/stationarity/: __init__.py
src/ts_stat_tests/tests/: correlation.py  heteroscedasticity.py  linearity.py  normality.py  regularity.py  seasonality.py  stability.py  stationarity.py
src/ts_stat_tests/utils/: data.py  errors.py
src/utils/: changelog.py  scripts.py
v0.1.0/: 404.html
v0.1.0/code/: index.html
v0.1.0/code/coverage/: z_12f61204a2fd893d_correlation_py.html  z_d1b4cc3c0143f559___init___py.html
v0.1.0/usage/changelog/: index.html
v0.1.0/usage/contributing/: index.html
v0.2.0/: 404.html  index.html
v0.2.0/code/: index.html
v0.2.0/code/correlation/: index.html
v0.2.0/code/coverage/: class_index.html  function_index.html  z_223f5bf099d4a095_data_py.html  z_223f5bf099d4a095_errors_py.html  z_82d3a98551bf1a78___init___py.html  z_d1b4cc3c0143f559___init___py.html
v0.2.0/code/regularity/: index.html
v0.2.0/search/: search_index.json
v0.2.0/usage/changelog/: index.html
v0.2.0/usage/contributing/: index.html
v0.2.0/usage/overview/: index.html
v0.3.1/: 404.html  index.html  objects.inv
v0.3.1/code/: index.html
v0.3.1/code/correlation/: index.html
v0.3.1/code/coverage/: index.html  status.json  z_12f61204a2fd893d___init___py.html  z_12f61204a2fd893d_correlation_py.html  z_12f61204a2fd893d_regularity_py.html  z_223f5bf099d4a095_data_py.html  (+3 more)
v0.3.1/search/: search_index.json
v0.4.5/: 404.html  index.html  objects.inv
v0.4.5/code/: index.html
v0.4.5/search/: search_index.json
v0.5.3/: 404.html  index.html  objects.inv
v0.5.3/code/: index.html
v0.5.3/search/: search_index.json
v0.6.2/: 404.html  index.html  objects.inv
v0.6.2/code/: index.html
v0.6.2/search/: search_index.json
v0.7.0/: 404.html  index.html  objects.inv
v0.7.0/code/: index.html
v0.7.0/search/: search_index.json
v0.8.0/: index.html  objects.inv
v0.8.0/code/: index.html
v0.8.0/search/: search_index.json
v1.0.0/: 404.html  objects.inv
v1.0.0/code/: index.html
v1.0.0/search/: search_index.json
(+134 files in other folders)
