[project]
name = "ts-stat-tests"
version = "v0.0.0"
description = "A suite of statistical tests for time-series data."
readme = "README.md"
license = "MIT"
authors = [
    { "name"="Chris Mahoney", "email"="ts-stat-tests@data-science-extensions.com" },
]
maintainers = [
    { "name"="Chris Mahoney", "email"="ts-stat-tests@data-science-extensions.com" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing :: Unit",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Environment :: Console",
]
requires-python = ">=3.10"
dependencies = [
    "typeguard==4.*",
    "antropy==0.1.*",
    # "llvmlite>=0.44.0rc2",
    "llvmlite>=0.44.0",
    # "numba>=0.61.0rc2",
    "numba>=0.61.0",
    "numpy==2.*",
    "pandas==2.*",
    "scipy==1.*",
    "statsmodels==0.14.*",
    "tsfeatures==0.4.*",
    "pmdarima",
]

[tool.uv]
override-dependencies = [
    "numpy==2.*",
]

[project.urls]
Homepage = "https://github.com/data-science-extensions/ts-stat-tests"
Documentation = "https://github.com/data-science-extensions/ts-stat-tests/blob/main/README.md"
Repository = "https://github.com/data-science-extensions/ts-stat-tests"
Changelog = "https://github.com/data-science-extensions/ts-stat-tests/releases"
Issues = "https://github.com/data-science-extensions/ts-stat-tests/issues"

[dependency-groups]
dev = [
    "black==25.*",
    "blacken-docs==1.*",
    "codespell==2.*",
    "ipykernel==6.*",
    "isort==6.*",
    "pre-commit==4.*",
    "pycln==2.*",
    "pylint==3.*",
    "pyupgrade==3.*",
    "uv==0.*",
]
docs = [
    "black==25.*",
    "docstring-inheritance==2.*",
    "livereload==2.*",
    "mike==2.*",
    "mkdocs==1.*",
    "mkdocs-autorefs==1.*",
    "mkdocs-coverage==2.*",
    "mkdocs-material==9.*",
    "mkdocstrings==0.*",
    "mkdocstrings-python==1.*",
    "pygithub==2.*",
    "docstring-format-checker==1.*",
]
test = [
    "ty==0.*",
    "parameterized==0.*",
    "pytest==8.*",
    "pytest-clarity==1.*",
    "pytest-cov==7.*",
    "pytest-icdiff==0.*",
    "pytest-sugar==1.*",
    "pytest-xdist==3.*",
    "requests==2.*",
    # "radon==6.*",
    # "types-protobuf==6.*",
    "complexipy==4.*",
    "stochastic>=0.7",
]

[tool.black]
line-length = 120
color = true
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.pytest.ini_options]
filterwarnings = [
    # "ignore::typeguard.InstrumentationWarning",
    "ignore::DeprecationWarning",
]
addopts = [
    "--verbose",
    "--verbose",
    "--cov=src/ts_stat_tests",
    "--cov-report=term",
    "--cov-report=html:cov-report/html",
    "--cov-report=xml:cov-report/xml/cov-report.xml",
]
testpaths = [
    "src/tests",
]
# python_files = ["test_*.py"]
# python_classes = ["Test*"]
# python_functions = ["test_*"]

[tool.isort]
import_heading_future = "## Future Python Library Imports ----"
import_heading_stdlib = "## Python StdLib Imports ----"
import_heading_thirdparty = "## Python Third Party Imports ----"
import_heading_firstparty = "## Local First Party Imports ----"
import_heading_localfolder = "## Local Module Imports ----"
profile = "black"
split_on_trailing_comma = true
combine_as_imports = true
lines_after_imports = 2

[tool.complexipy]
paths = "src/ts_stat_tests"
max-complexity-allowed = 15
quiet = false
ignore-complexity = true
details = "normal"
sort = "asc"

[tool.dfc]
allow_undefined_sections = false
require_docstrings = true
check_private = true
sections = [
    { order = 1, name = "summary",  type = "free_text",          required = true,  admonition = "note", prefix = "!!!"      },
    { order = 2, name = "details",  type = "free_text",          required = false, admonition = "abstract", prefix = "???+" },
    { order = 3, name = "params",   type = "list_name_and_type", required = false                                           },
    { order = 4, name = "raises",   type = "list_type",          required = false                                           },
    { order = 5, name = "returns",  type = "list_name_and_type", required = false                                           },
    { order = 6, name = "yields",   type = "list_type",          required = false                                           },
    { order = 7, name = "examples", type = "free_text",          required = false, admonition = "example", prefix = "???+"  },
    { order = 8, name = "notes",    type = "free_text",          required = false, admonition = "note", prefix = "???"      },
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
